# project-template

./: Cargo.toml  Makefile.toml  README.md  azure-pipelines.yml  codecov.yml
.github/workflows/: build.yml  check.yml  ci.yml  coverage.yml  label.yml  lint.yml  pr.yml  prepare.yml  release.yml  test.yml
crates/project/: Cargo.toml
crates/project-template/: CHANGELOG.md  Cargo.toml
crates/project-template-macros/: CHANGELOG.md  Cargo.toml
crates/project/src/: lib.rs
