[package]
name = "project-template"
version = "0.1.0"
authors = ["Daniel Balcomb <daniel.balcomb@gmail.com>"]
description = "A project template for the quick instantiation of rust projects."
repository = "https://github.com/brace-rs/project-template"
license = "MIT OR Apache-2.0"
edition = "2021"
autobins = false

[[bin]]
name = "project-template"
path = "src/main.rs"

[[bin]]
name = "project-template-cli"
path = "src/bin/cli.rs"
